# rating-movie

./: .gitignore  Makefile  README.md  algo.txt  docker-compose.yaml  dockerfile.superset  movie_data_project.html  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
src/: config.py  dataset.py
src/modeling/: train.py
task/dags/: dataset.py  pipeline_movie.py
task/scripts/: config.py  script.py  storage.py
